--- a/bower.json
+++ b/bower.json
@@ -10,6 +10,7 @@
 		"angular-mocks": "~1.2",
 		"angular-bootstrap": "~0.11.2",
 		"angular-bootstrap": "~0.12.0",
+		"angular-bootstrap-datetimepicker": "latest",
 		"angular-ui-utils": "~0.1.1",
 		"angular-ui-router": "~0.2.11" 
 	}
