--- a/bower.json
+++ b/bower.json
@@ -14,5 +14,8 @@
 		"angular-ui-utils": "~0.1.1",
 		"angular-ui-router": "~0.2.11",
 		"jQuery": "latest"
+	},
+	"resolutions": {
+		"angular": "~1.2"
 	}
 }
